manifests/greeting-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting
  namespace: greeter-app
  labels:
    app: greeting
spec:
  replicas: 3 # should match minReplicas in HPA
  selector:
    matchLabels:
      app: greeting
  template:
    metadata:
      labels:
        app: greeting
    spec:
      containers:
      - name: greeting
        image: juanroldan1989/greeting:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
