manifests/greeting-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting
  namespace: greeter-app
spec:
  selector:
    app: greeting
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
